cleaned up notebook 04_model_testing -A

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-
-# large files
+# Big Data Folders
 data/
-data/AODdata_cleaned/
-data/NO2data_cleaned/
-data/tempdata_cleaned/
-data/precipdata_cleaned/
 
 # OSX 
 .DS_Store
